<resources>
    <string name="app_name">My Priority Queue</string>
    <string name="title_Account">My Account</string>
    <string name="username">username</string>
    <string name="signin">Sign In</string>
    <string name="signout">Sign Out</string>
    <string name="createnewaccount">Create New Account</string>
    <string name="create">Create</string>
    <string name="password">password</string>

    <string name="title_Account_Login">Account Login</string>
    <string name="title_Account_Creation">Account Creation</string>
    <string name="title_MyQueue">My Queue TODO</string>
    <string name="title_YourQueue">Your Queue TODO</string>

    <string name="nav_title_Account">Account</string>
    <string name="nav_title_MyQueue">My Queue</string>
    <string name="nav_title_YourQueue">Your Queue</string>

    <!--not used in app but needed to resolve project errors-->
    <string name="title_activity_base_bottom_navigation">BaseBottomNavigationActivity</string>
</resources>
